<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="CatDog"
        android:textColor="#2F94B2"
        android:textSize="90dp" />

    <TextView
        android:id="@+id/logovet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Ветеринарная клиника "
        android:fontFamily="sans-serif-light"
        android:textColor="#2F94B2"
        android:textSize="20dp"
        android:layout_below="@id/logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        />

    <EditText
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:hint="Email"
        android:layout_centerInParent="true"
        android:id="@+id/email_login"
        android:layout_below="@id/logovet"
        android:layout_marginTop="30dp"
        />


    <EditText
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:hint="Password"
        android:layout_centerHorizontal="true"
        android:id="@+id/password_login"
        android:layout_below="@id/email_login"
        android:layout_marginTop="30dp"
        />

    
    <Button
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="Войти"
        android:layout_below="@id/password_login"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:id="@+id/btn_login"
        android:backgroundTint="@color/buttons"

        />
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/regist_txt"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/btn_login"
        android:text="Зарегистрироваться"
        android:layout_marginTop="20dp"
        android:textSize="20dp"
        />


</RelativeLayout>